gen/NuttParser.java
// Generated from G:/Nutt/src/main/java\NuttParser.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NuttParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AtSign=1, BackSlash=2, BackTick=3, BlockComment=4, Brace_Square_Left=5, 
		Brace_Square_Right=6, Brace_Curly_Left=7, Brace_Curly_Right=8, Brace_Paren_Left=9, 
		Brace_Paren_Right=10, Char_String=11, Colon=12, Comma=13, DecimalEscape=14, 
		Dot=15, EscapeCharacter=16, EscapeSequence=17, Float=18, HexEscape=19, 
		HexFloat=20, HexInt=21, Int=22, KW_Alias=23, KW_All=24, KW_Annotation=25, 
		KW_As=26, KW_Break=27, KW_Catch=28, KW_Class=29, KW_Continue=30, KW_CommonOf=31, 
		KW_Default=32, KW_Define=33, KW_Demand=34, KW_Deports=35, KW_Do=36, KW_Doif=37, 
		KW_Doifn=38, KW_Done=39, KW_Else=40, KW_End=41, KW_Enum=42, KW_Eval=43, 
		KW_Every=44, KW_Exec=45, KW_Exit=46, KW_Expose=47, KW_False=48, KW_Final=49, 
		KW_For=50, KW_Forget=51, KW_Funct=52, KW_Global=53, KW_If=54, KW_Imports=55, 
		KW_In=56, KW_Infix=57, KW_InstanceOf=58, KW_Is=59, KW_Local=60, KW_Macro=61, 
		KW_Match=62, KW_Matched=63, KW_Module=64, KW_Mut=65, KW_New=66, KW_Nil=67, 
		KW_Not_In=68, KW_Of=69, KW_On=70, KW_Outer=71, KW_Operator=72, KW_Param=73, 
		KW_Postfix=74, KW_Prefix=75, KW_Private=76, KW_Protected=77, KW_Public=78, 
		KW_Pure=79, KW_Record=80, KW_Repeat=81, KW_Requires=82, KW_Return=83, 
		KW_Reverse=84, KW_Static=85, KW_Then=86, KW_This=87, KW_To=88, KW_Trait=89, 
		KW_True=90, KW_Try=91, KW_Type=92, KW_TypeOf=93, KW_Until=94, KW_Using=95, 
		KW_Val=96, KW_Var=97, KW_While=98, KW_With=99, KW_Yield=100, LineComment=101, 
		NAME=102, NATIVE=103, OP_Add=104, OP_And=105, OP_Append=106, OP_Assign=107, 
		OP_Backward=108, OP_Case_Arrow=109, OP_Compose=110, OP_Div=111, OP_Equal=112, 
		OP_Extends=113, OP_Forward=114, OP_Greater=115, OP_IntDiv=116, OP_Implements=117, 
		OP_LambdaReturn=118, OP_Length=119, OP_Less=120, OP_Less_Equal=121, OP_Mod=122, 
		OP_Mult=123, OP_Not=124, OP_Or=125, OP_Pass=126, OP_Power=127, OP_Range=128, 
		OP_Reverse=129, OP_Similar=130, OP_SlightlyGreater=131, OP_SlightlyLess=132, 
		OP_Sub=133, OP_Tilda=134, OP_Underscore=135, OP_Xor=136, Op_Greater_Equal=137, 
		Op_Not_Equal=138, Op_Not_Similar=139, Op_Custom=140, Question=141, SHEBANG=142, 
		SemiColon=143, UtfEscape=144, WS=145, Normal_string=146;
	public static final int
		RULE_chunk = 0, RULE_module = 1, RULE_module_start = 2, RULE_module_name = 3, 
		RULE_module_require = 4, RULE_named_import = 5, RULE_named_import_list = 6, 
		RULE_module_import = 7, RULE_module_deport = 8, RULE_module_list = 9, 
		RULE_module_group = 10, RULE_module_name_or_group = 11, RULE_block = 12, 
		RULE_functiondef = 13, RULE_funct_modifier = 14, RULE_stat = 15, RULE_type_param = 16, 
		RULE_template_type = 17, RULE_relation_type = 18, RULE_type_param_list = 19, 
		RULE_trait_def = 20, RULE_class_header = 21, RULE_class_def = 22, RULE_access_modifier = 23, 
		RULE_class_member = 24, RULE_signature_def = 25, RULE_funct_signature = 26, 
		RULE_type_def = 27, RULE_record_def = 28, RULE_record_member = 29, RULE_record_member_list = 30, 
		RULE_using = 31, RULE_overloading_operator_param = 32, RULE_overloading_operator = 33, 
		RULE_operator_decl = 34, RULE_operator_qualifier = 35, RULE_annotation_decl = 36, 
		RULE_group_assignment = 37, RULE_do_done_block = 38, RULE_composed_assign = 39, 
		RULE_self_assign = 40, RULE_if_then_else_block = 41, RULE_then_block = 42, 
		RULE_else_block = 43, RULE_forget = 44, RULE_flat_name_list = 45, RULE_loop = 46, 
		RULE_for_each_loop = 47, RULE_op_direction = 48, RULE_while_do_loop = 49, 
		RULE_repeat_until_loop = 50, RULE_function_return = 51, RULE_function_yield = 52, 
		RULE_try_catch = 53, RULE_demand = 54, RULE_annotation = 55, RULE_var_signature = 56, 
		RULE_var_decl = 57, RULE_scope_qualifier = 58, RULE_constant_qualifier = 59, 
		RULE_type_flat_name = 60, RULE_alias_decl = 61, RULE_by_type_var_decl = 62, 
		RULE_by_value_var_decl = 63, RULE_explist = 64, RULE_exp = 65, RULE_match_to = 66, 
		RULE_array_initializer = 67, RULE_array_element = 68, RULE_range_array_initializer = 69, 
		RULE_comprehense_array_initializer = 70, RULE_map_element = 71, RULE_map_initializer = 72, 
		RULE_record_element = 73, RULE_record_element_list = 74, RULE_record_initializer = 75, 
		RULE_operator_logical = 76, RULE_default_match_branch = 77, RULE_match_branch = 78, 
		RULE_atom = 79, RULE_nil = 80, RULE_boolean = 81, RULE_number = 82, RULE_int = 83, 
		RULE_float = 84, RULE_string = 85, RULE_explicit_operator = 86, RULE_using_in_call = 87, 
		RULE_var_signature_list = 88, RULE_vararg_or_signature = 89, RULE_func_output = 90, 
		RULE_local_funct = 91, RULE_funcbody = 92, RULE_lambda_decl = 93, RULE_operator_infix = 94, 
		RULE_default_infix_operator = 95, RULE_operator_composed = 96, RULE_operator_math = 97, 
		RULE_operator_postfix = 98, RULE_composed_assign_op = 99, RULE_operator_prefix = 100, 
		RULE_operator_comparison = 101;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "module", "module_start", "module_name", "module_require", "named_import", 
			"named_import_list", "module_import", "module_deport", "module_list", 
			"module_group", "module_name_or_group", "block", "functiondef", "funct_modifier", 
			"stat", "type_param", "template_type", "relation_type", "type_param_list", 
			"trait_def", "class_header", "class_def", "access_modifier", "class_member", 
			"signature_def", "funct_signature", "type_def", "record_def", "record_member", 
			"record_member_list", "using", "overloading_operator_param", "overloading_operator", 
			"operator_decl", "operator_qualifier", "annotation_decl", "group_assignment", 
			"do_done_block", "composed_assign", "self_assign", "if_then_else_block", 
			"then_block", "else_block", "forget", "flat_name_list", "loop", "for_each_loop", 
			"op_direction", "while_do_loop", "repeat_until_loop", "function_return", 
			"function_yield", "try_catch", "demand", "annotation", "var_signature", 
			"var_decl", "scope_qualifier", "constant_qualifier", "type_flat_name", 
			"alias_decl", "by_type_var_decl", "by_value_var_decl", "explist", "exp", 
			"match_to", "array_initializer", "array_element", "range_array_initializer", 
			"comprehense_array_initializer", "map_element", "map_initializer", "record_element", 
			"record_element_list", "record_initializer", "operator_logical", "default_match_branch", 
			"match_branch", "atom", "nil", "boolean", "number", "int", "float", "string", 
			"explicit_operator", "using_in_call", "var_signature_list", "vararg_or_signature", 
			"func_output", "local_funct", "funcbody", "lambda_decl", "operator_infix", 
			"default_infix_operator", "operator_composed", "operator_math", "operator_postfix", 
			"composed_assign_op", "operator_prefix", "operator_comparison"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'\\'", "'`'", null, "'['", "']'", "'{'", "'}'", "'('", 
			"')'", null, "':'", "','", null, "'.'", null, null, null, null, null, 
			null, null, "'alias'", null, "'annotation'", "'as'", "'break'", "'catch'", 
			"'class'", "'continue'", "'commonof'", "'default'", "'define'", "'demand'", 
			"'deports'", "'do'", "'doif'", "'doifn'", "'done'", "'else'", "'end'", 
			"'enum'", "'eval'", "'every'", "'exec'", "'exit'", "'expose'", null, 
			"'final'", "'for'", "'forget'", "'funct'", "'global'", "'if'", "'imports'", 
			null, "'infix'", "'instanceof'", "'is'", "'local'", "'macro'", "'match'", 
			"'matched'", "'module'", "'mut'", "'new'", "'nil'", null, "'of'", "'on'", 
			"'outer'", "'operator'", "'param'", "'postfix'", "'prefix'", "'private'", 
			"'protected'", "'public'", "'pure'", "'record'", "'repeat'", "'requires'", 
			"'return'", "'reverse'", "'static'", "'then'", "'this'", "'to'", "'trait'", 
			null, "'try'", "'type'", "'typeof'", "'until'", "'using'", "'val'", "'var'", 
			"'while'", "'with'", "'yield'", null, null, "'$$NATIVE.'", "'+'", null, 
			"';;'", "'='", null, "'-->'", "'<=='", null, null, "'<:'", null, "'>'", 
			"'//'", "'::'", "'==>'", "'#'", "'<'", null, "'%'", null, null, null, 
			"'...'", "'^'", "'..'", "'<|>'", "'=='", "'~>'", "'<~'", "'-'", "'~'", 
			"'_'", null, null, null, null, null, "'?'", null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AtSign", "BackSlash", "BackTick", "BlockComment", "Brace_Square_Left", 
			"Brace_Square_Right", "Brace_Curly_Left", "Brace_Curly_Right", "Brace_Paren_Left", 
			"Brace_Paren_Right", "Char_String", "Colon", "Comma", "DecimalEscape", 
			"Dot", "EscapeCharacter", "EscapeSequence", "Float", "HexEscape", "HexFloat", 
			"HexInt", "Int", "KW_Alias", "KW_All", "KW_Annotation", "KW_As", "KW_Break", 
			"KW_Catch", "KW_Class", "KW_Continue", "KW_CommonOf", "KW_Default", "KW_Define", 
			"KW_Demand", "KW_Deports", "KW_Do", "KW_Doif", "KW_Doifn", "KW_Done", 
			"KW_Else", "KW_End", "KW_Enum", "KW_Eval", "KW_Every", "KW_Exec", "KW_Exit", 
			"KW_Expose", "KW_False", "KW_Final", "KW_For", "KW_Forget", "KW_Funct", 
			"KW_Global", "KW_If", "KW_Imports", "KW_In", "KW_Infix", "KW_InstanceOf", 
			"KW_Is", "KW_Local", "KW_Macro", "KW_Match", "KW_Matched", "KW_Module", 
			"KW_Mut", "KW_New", "KW_Nil", "KW_Not_In", "KW_Of", "KW_On", "KW_Outer", 
			"KW_Operator", "KW_Param", "KW_Postfix", "KW_Prefix", "KW_Private", "KW_Protected", 
			"KW_Public", "KW_Pure", "KW_Record", "KW_Repeat", "KW_Requires", "KW_Return", 
			"KW_Reverse", "KW_Static", "KW_Then", "KW_This", "KW_To", "KW_Trait", 
			"KW_True", "KW_Try", "KW_Type", "KW_TypeOf", "KW_Until", "KW_Using", 
			"KW_Val", "KW_Var", "KW_While", "KW_With", "KW_Yield", "LineComment", 
			"NAME", "NATIVE", "OP_Add", "OP_And", "OP_Append", "OP_Assign", "OP_Backward", 
			"OP_Case_Arrow", "OP_Compose", "OP_Div", "OP_Equal", "OP_Extends", "OP_Forward", 
			"OP_Greater", "OP_IntDiv", "OP_Implements", "OP_LambdaReturn", "OP_Length", 
			"OP_Less", "OP_Less_Equal", "OP_Mod", "OP_Mult", "OP_Not", "OP_Or", "OP_Pass", 
			"OP_Power", "OP_Range", "OP_Reverse", "OP_Similar", "OP_SlightlyGreater", 
			"OP_SlightlyLess", "OP_Sub", "OP_Tilda", "OP_Underscore", "OP_Xor", "Op_Greater_Equal", 
			"Op_Not_Equal", "Op_Not_Similar", "Op_Custom", "Question", "SHEBANG", 
			"SemiColon", "UtfEscape", "WS", "Normal_string"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NuttParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NuttParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(NuttParser.EOF, 0); }
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).exitChunk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_Module) {
				{
				setState(204);
				module();
				}
			}

			setState(207);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public Module_startContext module_start() {
			return getRuleContext(Module_startContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode KW_End() { return getToken(NuttParser.KW_End, 0); }
		public List<Module_requireContext> module_require() {
			return getRuleContexts(Module_requireContext.class);
		}
		public Module_requireContext module_require(int i) {
			return getRuleContext(Module_requireContext.class,i);
		}
		public List<Module_importContext> module_import() {
			return getRuleContexts(Module_importContext.class);
		}
		public Module_importContext module_import(int i) {
			return getRuleContext(Module_importContext.class,i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			module_start();
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_Requires) {
				{
				{
				setState(210);
				module_require();
				}
				}
				setState(215);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(216);
					module_import();
					}
					} 
				}
				setState(221);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(222);
			block();
			setState(223);
			match(KW_End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_startContext extends ParserRuleContext {
		public TerminalNode KW_Module() { return getToken(NuttParser.KW_Module, 0); }
		public Module_nameContext module_name() {
			return getRuleContext(Module_nameContext.class,0);
		}
		public Module_startContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).enterModule_start(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).exitModule_start(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule_start(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_startContext module_start() throws RecognitionException {
		Module_startContext _localctx = new Module_startContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_module_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			match(KW_Module);
			setState(226);
			module_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_nameContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(NuttParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(NuttParser.NAME, i);
		}
		public List<TerminalNode> Dot() { return getTokens(NuttParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(NuttParser.Dot, i);
		}
		public TerminalNode KW_As() { return getToken(NuttParser.KW_As, 0); }
		public Module_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).enterModule_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuttParserListener ) ((NuttParserListener)listener).exitModule_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NuttParserVisitor ) return ((NuttParserVisitor<? extends T>)visitor).visitModule_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_nameContext module_name() throws RecognitionException {
		Module_nameContext _localctx = new Module_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module_name);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			match(NAME);
			setState(233);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(229);
					match(Dot);
					setState(230);
					match(NAME);
					}
					} 
				}
				setState(235);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(238);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(236);
				match(KW_As);
				setState(237);
				match(NAME);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
